--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.11",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "mapbox-gl": "^2.14.1",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
